<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_white_top"
    android:elevation="@dimen/dp_1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvSn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_patient_id"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvName"
        android:textSize="@dimen/sp_16"
        android:padding="@dimen/dp_4"
        android:textColor="@color/blue"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_patient_name"
        app:layout_constraintHorizontal_weight="1.2"
        app:layout_constraintTop_toTopOf="@id/tvSn"
        app:layout_constraintBottom_toBottomOf="@id/tvSn"
        app:layout_constraintStart_toEndOf="@id/tvSn"
        app:layout_constraintEnd_toStartOf="@id/tvAddress"
        android:textSize="@dimen/sp_16"
        android:padding="@dimen/dp_4"
        android:textColor="@color/blue"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_address"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintTop_toTopOf="@id/tvSn"
        app:layout_constraintBottom_toBottomOf="@id/tvSn"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintEnd_toStartOf="@id/tvGender"
        android:textSize="@dimen/sp_16"
        android:padding="@dimen/dp_4"
        android:textColor="@color/blue"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_sex"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintTop_toTopOf="@id/tvSn"
        app:layout_constraintBottom_toBottomOf="@id/tvSn"
        app:layout_constraintStart_toEndOf="@id/tvAddress"
        app:layout_constraintEnd_toStartOf="@id/ic"
        android:textSize="@dimen/sp_16"
        android:padding="@dimen/dp_4"
        android:textColor="@color/blue"
        android:maxLines="1"/>

    <View
        android:id="@+id/ic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintTop_toTopOf="@id/tvSn"
        app:layout_constraintBottom_toBottomOf="@id/tvSn"
        app:layout_constraintStart_toEndOf="@id/tvGender"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>