<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">


        <ImageView
            android:id="@+id/avatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/img_des"
            android:src="@drawable/img"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lbName"
            app:layout_constraintHorizontal_weight="1"/>

        <TextView
            android:id="@+id/lbName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lb_name"
            android:textSize="@dimen/sp_16"
            android:padding="@dimen/dp_2"
            android:textColor="@color/bk_50p"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:gravity="center_vertical"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lbBirthday"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintEnd_toStartOf="@id/tvSn"/>

        <TextView
            android:id="@+id/lbBirthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lb_birthday"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:padding="@dimen/dp_2"
            android:textColor="@color/bk_50p"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/lbName"
            app:layout_constraintStart_toStartOf="@id/lbName"
            app:layout_constraintBottom_toTopOf="@id/lbGender"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lbGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lb_gender"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:padding="@dimen/dp_2"
            android:textColor="@color/bk_50p"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/lbBirthday"
            app:layout_constraintStart_toStartOf="@id/lbName"
            app:layout_constraintBottom_toTopOf="@id/lbPhone"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lbPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lb_phone"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:padding="@dimen/dp_2"
            android:textColor="@color/bk_50p"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/lbGender"
            app:layout_constraintStart_toStartOf="@id/lbName"
            app:layout_constraintBottom_toTopOf="@id/lbAddress"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lbAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lb_address"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:padding="@dimen/dp_2"
            android:textColor="@color/bk_50p"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/lbPhone"
            app:layout_constraintStart_toStartOf="@id/lbName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>























        <TextView
            android:id="@+id/tvSn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Dang Xuan Lam"
            android:textSize="@dimen/sp_18"
            android:padding="@dimen/dp_2"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:gravity="center_vertical"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvBirthday"
            app:layout_constraintStart_toEndOf="@id/lbName"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvBirthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="01/01/1984"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:padding="@dimen/dp_2"
            android:textColor="@color/bk"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/tvSn"
            app:layout_constraintStart_toStartOf="@id/tvSn"
            app:layout_constraintBottom_toTopOf="@id/tvGender"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Nam"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:padding="@dimen/dp_2"
            android:textColor="@color/bk"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/tvBirthday"
            app:layout_constraintStart_toStartOf="@id/tvSn"
            app:layout_constraintBottom_toTopOf="@id/tvPhone"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0902500478"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:padding="@dimen/dp_2"
            android:textColor="@color/bk"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/tvGender"
            app:layout_constraintStart_toStartOf="@id/tvSn"
            app:layout_constraintBottom_toTopOf="@id/tvAddress"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="80/8 Luu Chi Hieu - P. Tay Thanh - Q. Tan Phu - HCM"
            android:textSize="@dimen/sp_16"
            android:textStyle="normal"
            android:padding="@dimen/dp_2"
            android:maxLines="1"
            android:textColor="@color/bk"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"
            app:layout_constraintStart_toStartOf="@id/tvSn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>